# api-gateway-system

./: .GITIGNORE  LICENSE  README.md  Startup-Guide.txt  railway.json
admin-dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.js
admin-dashboard/src/: App.jsx  api.js
admin-dashboard/src/components/: Dashboard.jsx  Login.jsx  index.jsx
api-gateway/: dummy_order_service.py  dummy_product_service.py  dummy_user_service.py  pom.xml  run-all.sh
api-gateway/src/main/java/com/gateway/config/: AppConfig.java  DataSeeder.java  GlobalExceptionHandler.java  SecurityConfig.java
api-gateway/src/main/java/com/gateway/controller/: AdminController.java  AuthController.java  GatewayController.java
api-gateway/src/main/java/com/gateway/filter/: JwtAuthenticationFilter.java
api-gateway/src/main/java/com/gateway/model/: RequestLog.java  User.java
api-gateway/src/main/java/com/gateway/ratelimit/: LeakyBucket.java  TokenBucket.java
api-gateway/src/main/java/com/gateway/repository/: RequestLogRepository.java  UserRepository.java
api-gateway/src/main/java/com/gateway/service/: RateLimiterService.java  UserDetailsServiceImpl.java
api-gateway/src/main/resources/: application.properties
cpp-rate-limiter/: CMakeLists.txt  README.md
cpp-rate-limiter/include/: leaky_bucket.hpp  rate_limiter_manager.hpp  token_bucket.hpp
cpp-rate-limiter/src/: leaky_bucket.cpp  main.cpp  rate_limiter_manager.cpp  token_bucket.cpp
cpp-rate-limiter/tests/: test_rate_limiter.cpp
python-analytics/: README.md  requirements.txt
python-analytics/src/: analytics.py  anomaly_detector.py  db.py  main.py
python-analytics/tests/: test_analytics.py
(+4 files in other folders)
